<package>
  <name>jsk_meshes</name>
  <version>0.2.5</version>
  <description>urdf models converted from euslisp</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="murooka@jsk.t.u-tokyo.ac.jp">Masaki Murooka</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">Youhei Kakiuchi</author>
  <author email="murooka@jsk.imi.i.u-tokyo.ac.jp">Masaki Murooka</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/eusurdf</url>
  <url type="repository">https://github.com/jsk-ros-pkg/eusurdf</url>
  <url type="bugtracker">https://github.com/jsk-ros-pkg/eusurdf/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- if same models are defined on textured_models, gazebo loads textured at first -->
    <gazebo_ros gazebo_model_path="${prefix}/textured_models" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
